updated Japanese translation

--- a/po/wesnoth-dw/ja.po
+++ b/po/wesnoth-dw/ja.po
@@ -1,5 +1,6 @@
 # Translators:
-# RatArmy <broadbarredfirefish@gmail.com>, 2018
+# RatArmy <broadbarredfirefish@gmail.com>, 2019
+# tamanegi, 2019
 #
 msgid ""
 msgstr ""
@@ -7,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
 "PO-Revision-Date: 2018-07-11 10:25+0000\n"
-"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2018\n"
+"Last-Translator: tamanegi, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -370,8 +371,6 @@ msgstr "おお、私は成し遂げたぞ！"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:626
-#, fuzzy
-#| msgid "Good work Kai, if I may say so."
 msgid "Good work, Kai, if I may say so."
 msgstr "Kai、失礼な言い方かもしれませんが、うまく戦われたと言わせてください。"
 
@@ -939,7 +938,7 @@ msgstr "コウモリが興奮しているぞ、誰がそこに調査に行け。
 msgid ""
 "I wonder why such a strangely colored wolf emerged from the forest over "
 "there."
-msgstr ""
+msgstr "あそこの森から妙な色の狼が現れた。これはどういうことだろう？"
 
 #. [message]: speaker=unit
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:306
