--- a/po/wesnoth-ei/ja.po
+++ b/po/wesnoth-ei/ja.po
@@ -1,5 +1,6 @@
 # Translators:
 # RatArmy <broadbarredfirefish@gmail.com>, 2019
+# tamanegi, 2019
 #
 msgid ""
 msgstr ""
@@ -7,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
 "PO-Revision-Date: 2018-09-12 07:30+0000\n"
-"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2019\n"
+"Last-Translator: tamanegi, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -550,11 +551,13 @@ msgid ""
 "This is an old escape route for the outpost. Unfortunately these caves are "
 "currently inhabited by trolls, who are blocking our path through the tunnel."
 msgstr ""
+"これは前哨基地の古い脱出ルートです。不幸なことにこの洞窟には現在トロルが住み"
+"着いており、彼らは私たちを邪魔するでしょう。"
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:245
 msgid "We must make haste to escape before the undead catch up."
-msgstr ""
+msgstr "アンデッドに捕まらぬよう急がなければなりません。"
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:250
@@ -629,6 +632,8 @@ msgid ""
 "Very well. The best of luck in your battle. Gweddry, we may be able to avoid "
 "the bulk of the trolls by going through the dwarves’ tunnel."
 msgstr ""
+"心強い。あなた方の戦いに幸運があらんことを。Gweddry、ドワーフのトンネルを通れ"
+"ばトロルを避けられるかもしれません。"
 
 #. [message]: speaker=unit
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:378
@@ -649,19 +654,14 @@ msgstr "ついに見つけたぞ、肉袋ども！ 覚悟しろ！"
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:452
-#, fuzzy
-#| msgid ""
-#| "They follow us... we must get out of this tunnel. It looks like it is "
-#| "leading east. That is unfortunate, for it will take us beyond the borders "
-#| "of Wesnoth. But it is our only option."
 msgid ""
 "They follow us... we must escape through this tunnel. That is unfortunate, "
 "for it will take us into the Estmark hills, beyond the borders of Wesnoth. "
 "But it is our only option."
 msgstr ""
-"奴らが私たちを追ってきます……私たちはこのトンネルから出なければなりません。こ"
-"れは東に通じているようです。 Wesnoth 国境の向こうに行ってしまうのはついていま"
-"せん。しかし、私たちに他の選択は残されていません。"
+"奴らが私たちを追ってきます……私たちはこのトンネルを逃げねばなりません。ついて"
+"いないことに、これは Estmark 丘陵に通じているようです。 Wesnoth の国境を越え"
+"てしまうことになるでしょう。しかし、私たちに他の選択は残されていません。"
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:489
@@ -1651,10 +1651,8 @@ msgstr "Grug"
 
 #. [objective]: condition=win
 #: data/campaigns/Eastern_Invasion/scenarios/07a_The_Crossing.cfg:104
-#, fuzzy
-#| msgid "Move Gweddry and Owaec across the river"
 msgid "Move Gweddry, Owaec, and Dacyn across the river"
-msgstr "GweddryとOwaecの川越え"
+msgstr "Gweddry、Owaec、Dacyn が川を渡る"
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/07a_The_Crossing.cfg:145
