--- a/po/wesnoth-tutorial/ja.po
+++ b/po/wesnoth-tutorial/ja.po
@@ -1,5 +1,6 @@
 # Translators:
 # RatArmy <broadbarredfirefish@gmail.com>, 2019
+# tamanegi, 2019
 #
 msgid ""
 msgstr ""
@@ -7,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
 "PO-Revision-Date: 2018-05-06 10:23+0000\n"
-"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2019\n"
+"Last-Translator: tamanegi, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -1901,39 +1902,27 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:1110
-#, fuzzy
-#| msgid ""
-#| "Advancing a level has fully healed me! I am particularly good with the "
-#| "sword, dealing 8 damage in 4 attacks. While I don’t have the Leadership "
-#| "abilities of the Elvish Captain, my superior fighting skills allow my "
-#| "attacks to do more damage!"
 msgid ""
 "Advancing a level has fully healed me! I have become better at using the "
 "sword, dealing 9 damage in 4 attacks. Although I do not have any special "
 "abilities, my fighting skills will allow me to beat the orcs by dealing more "
 "damage!"
 msgstr ""
-"レベルアップで全回復したぞ！剣術を磨いたから、8ー4の攻撃ができるんだ。エルフ"
-"の隊長のように統率能力は持たないが、卓越した戦闘技術で敵に多くのダメージを与"
-"えるぞ！"
+"レベルアップで全回復したぞ！剣術を磨いたから、9ー4の攻撃ができるんだ。特殊な"
+"能力をは持っていないけど、この卓越した戦闘技術があればオークに多くのダメージ"
+"を与えられる！"
 
 #. [message]: speaker=unit
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:1111
-#, fuzzy
-#| msgid ""
-#| "Advancing a level has fully healed me! I am particularly good with the "
-#| "sword, dealing 8 damage in 4 attacks. While I don’t have the Leadership "
-#| "abilities of the Elvish Captain, my superior fighting skills allow my "
-#| "attacks to do more damage!"
 msgid ""
 "female^Advancing a level has fully healed me! I have become better at using "
 "the sword, dealing 9 damage in 4 attacks. Although I do not have any special "
 "abilities, my fighting skills will allow me to beat the orcs by dealing more "
 "damage!"
 msgstr ""
-"レベルアップで全回復したぞ！剣術を磨いたから、8ー4の攻撃ができるんだ。エルフ"
-"の隊長のように統率能力は持たないが、卓越した戦闘技術で敵に多くのダメージを与"
-"えるぞ！"
+"レベルアップで全回復したわ！剣術に磨きをかけたから、9ー4の攻撃ができるように"
+"なったわ。特殊な能力は持っていないけど、この戦闘技術でオークにより多くのダ"
+"メージが与えられる！"
 
 #. [message]: speaker=Galdrad
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:1120
@@ -2019,7 +2008,7 @@ msgstr ""
 #. [unit_type]: id=Warrior, race=human
 #: data/campaigns/tutorial/units/Warrior.cfg:4
 msgid "Warrior"
-msgstr ""
+msgstr "勇士"
 
 #. [unit_type]: id=Warrior, race=human
 #. [unit_type]: id=Warrioress, race=human
@@ -2029,13 +2018,12 @@ msgid ""
 "With more experience, Fighters have honed their skills with the sword and "
 "become powerful Warriors."
 msgstr ""
+"経験を積み、剣術の技を磨き上げた戦士は強力な勇士（Warrior）となります。"
 
 #. [unit_type]: id=Warrioress, race=human
 #: data/campaigns/tutorial/units/Warrioress.cfg:4
-#, fuzzy
-#| msgid "female^Fighter"
 msgid "female^Warrior"
-msgstr "女戦士"
+msgstr "勇士"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/utils/utils.cfg:57
