--- a/po/wesnoth-units/ja.po
+++ b/po/wesnoth-units/ja.po
@@ -1,7 +1,8 @@
 # Translators:
 # IWAI, Masaharu <iwaim.sub@gmail.com>, 2018
-# RatArmy <broadbarredfirefish@gmail.com>, 2018
 # 堀 秀幸 <Hide.HORI@gmail.com>, 2019
+# RatArmy <broadbarredfirefish@gmail.com>, 2019
+# tamanegi, 2019
 #
 msgid ""
 msgstr ""
@@ -9,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
 "PO-Revision-Date: 2018-05-06 10:22+0000\n"
-"Last-Translator: 堀 秀幸 <Hide.HORI@gmail.com>, 2019\n"
+"Last-Translator: tamanegi, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -2348,6 +2349,17 @@ msgid ""
 "service, such a status is not one often sought after by the majority of "
 "Elvenkind."
 msgstr ""
+"熟練したエルフの戦士は 「Sárcan」 と呼ばれることがあり、その意味はおおよそ"
+"「防衛への献身者」か「経験によって変貌した者」といったものです。人間の言葉で"
+"はしばしば「エルフの英雄（Elvish Hero）」と訳され、ある程度の尊敬や名声を示し"
+"ますが、彼らの地位を讃えているわけではありません。無数の戦いをしのぎ、その中"
+"で倒れていった同胞たちよりも長く生き延びた者こそがエルフの英雄なのです。たと"
+"えばオークや人間が美しい森を荒らし、同胞である罪なきエルフ族を傷つける様のよ"
+"うに、彼らはあらゆる種族がはたらいた暴虐を目にしています。長年に渡って戦い続"
+"けた結果、エルフの英雄は近接戦闘に熟練していますが、戦いがもたらした困難と破"
+"壊は彼らの心と体に大きな傷を残しています。エルフ族は軍事力の必要性を理解して"
+"おり、また「Sárcanet」を英雄として讃えていますが、エルフ族の大多数はそのよう"
+"な称号を求めはしません。"
 
 #. [unit_type]: id=Elvish High Lord, race=elf
 #: data/core/units/elves/High_Lord.cfg:4
@@ -2419,6 +2431,25 @@ msgid ""
 "restraint is difficult for most, but those who can do so are granted the "
 "title of Lord and become the next generation of Elvish leadership."
 msgstr ""
+"エルフの貴族階級における継承には多くの厳格な規程があり、高度に構造化された手"
+"続きとなっています。エルフの社会は、森を守る戦士とレンジャー、平和主義で戦い"
+"を避ける市民、そして妖精の魔術を学ぶヒーラーと秘術師、という三つの派閥で構成"
+"されており、次代のリーダー達もエルフ社会のこの三つの面をバランス良く管理しな"
+"ければなりません。これら派閥間の調整を行い、社会を健全に管理するためには全て"
+"のエルフに対する理解に加えて個人的な資質も要求されるため、その管理者としての"
+"役割は非常に困難です。\n"
+"\n"
+"多くのエルフは若い頃から弓術と剣術の訓練を開始します。その中でも、確かな血筋"
+"で有望な少年達については秘術を修めた熟練魔術師（Enchantress）の元で修行を積み"
+"ます。しかし、妖精の魔術は本質的に女性エルフに強い適正があるため、ごく限られ"
+"た男性エルフだけが妖精の世界へと至る揺蕩う道をつかみ、その秘術の世界に自身を"
+"結びつけることができます。才能と努力をもって剣術と魔術において力を示した者は"
+"その新しい力を賢く使わねばなりません。力をぶつけ合うような衝突は軽々しく起"
+"こってはならないのですから。それに、戦いで勝てる場合でも積極的に戦うべきだと"
+"は限りません。とは言え、秀でた武勇を持っているにも関わらず平和的な話し合いに"
+"尽力することは容易ではありません。しかし、その困難を成し遂げられる者だけがエ"
+"ルフの貴族（Elvish Lord）と認められ、次世代のエルフのリーダーとなっていくので"
+"す。"
 
 #. [unit_type]: id=Elvish Marksman, race=elf
 #: data/core/units/elves/Marksman.cfg:4
@@ -2438,6 +2469,14 @@ msgid ""
 "keep up with the eyes is no easy feat, and realizing this prodigious skill "
 "does come with the cost of weakness in close quarters."
 msgstr ""
+"エルフは妖精の世界と密接なつながりがあります。そのため、エルフには生来わずか"
+"ながらも魔力が染み込んでおり、それにより非常に鋭い感覚を得ています。それが長"
+"年に渡る深い森での狩猟経験と組み合わさると、異常なまでに優れた視力をもたら"
+"し、弓術のさらなる向上につながることがあります。弓術に優れたエルフの射撃手"
+"（Elvish Marksman）は数百歩離れた場所から針の穴ほどの目標を射抜く精密さ、そし"
+"て落ちる枝を撃ち抜くほどの早さを兼ね備えています。もちろん、優れた視力に見"
+"合った身体を作り上げることは簡単ではありません。その並外れた射撃能力の代償と"
+"して、接近戦の能力が犠牲になっています。"
 
 #. [attack]: type=pierce
 #: data/core/units/elves/Marksman.cfg:38
@@ -2472,6 +2511,15 @@ msgid ""
 "invasion force, and it is precisely because of the skillful maneuvering of "
 "the marshals that manage the protection of their people."
 msgstr ""
+"エルフは開戦を扇動することはあまりありません。一方で、彼らは避けられない戦い"
+"に怯えたりもしません。当然のことですが、何の戦術も戦略も無く闇雲に戦うことは"
+"愚の骨頂であります。そのため、エルフも戦略眼を持った指揮官達を常に維持してい"
+"ます。優れた隊長から選抜されたエルフの元帥（Elvish Marshal）は人間やオークを"
+"含む様々な軍隊方式についての訓練を積んでいます。彼らは聡明で型にはまらない戦"
+"略家で、巨大な戦線を複数の小規模戦に落とし込んだり、通常の会戦を散発なゲリラ"
+"戦に変えてしまうようことを得意とします。侵略軍にとって、森でそこに住むエルフ"
+"と戦うというのはいつても尻込みしたくなるような任務です。人々を守ろうとする熟"
+"練した元帥達の手管を思えば、その懸念は妥当としか言えません。"
 
 #. [unit_type]: id=Elvish Outrider, race=elf
 #: data/core/units/elves/Outrider.cfg:4
@@ -2520,6 +2568,14 @@ msgid ""
 "choose to withdraw rather than risk a game of guerrilla warfare with rangers "
 "in the forests."
 msgstr ""
+"静かなる森の監視者、エルフのレンジャー（Elvish Ranger）は隠密と偵察の達人で"
+"す。彼らの多くは一匹狼の探索者で、自分たちの森のそびえ立つ木々や手つかずの美"
+"しい自然の中を旅することを好みます。これらは彼らが命がけで守ろうとしているも"
+"のでもあります。彼らは剣術や弓術に優れてはいますが、同格の専業戦士に比べると"
+"若干戦闘技術で劣っています。かわりに、木々の陰から敵へ奇襲をしかけることを得"
+"意としています。それにより、レンジャー部隊による奇襲は数倍の軍勢を切り裂くこ"
+"とすら可能だと噂されています。相対する敵も森でレンジャーとのゲリラ戦に付き合"
+"うよりは後退を選択することが多いようです。"
 
 #. [female]
 #: data/core/units/elves/Ranger.cfg:92
@@ -2548,6 +2604,16 @@ msgid ""
 "engagement means that Elvish riders are the oft unsung heroes of war, left "
 "supporting their brethren from the back lines."
 msgstr ""
+"エルフの間ではゲリラ戦術の有効性が広く知れ渡っており、その運用には小部隊間の"
+"迅速な意思疎通と戦場間の部隊移動を速やかに案内する能力が必要です。その結果、"
+"流動する前線である程度以上戦える高機動な兵士の保持がエルフの間では重視されて"
+"います。経験を積んだエルフの騎兵（Elvish Rider）はこれらの事実を良く理解して"
+"いるため、戦闘技術よりも馬術の向上に力をいれています。彼らの森での移動速度は"
+"他の騎兵から見れば自殺行為以外の何物でもなく、その上、2-3 日休みも取らずに駆"
+"けることができるほどタフです。エルフの戦術において彼らの知性と情報伝達は欠か"
+"せないものではありますが、戦闘技術や戦線維持能力はあまり高くありません。結"
+"果、華美に欠けるため英雄譚に謳われることこそほとんどありませんが、隠れた英雄"
+"として後方より仲間たちを支援しつづけています。"
 
 #. [unit_type]: id=Elvish Scout, race=elf
 #: data/core/units/elves/Scout.cfg:4
@@ -2569,6 +2635,15 @@ msgid ""
 "units and are adept at quickly transferring information between patrols and "
 "skirmish groups, whom they also reinforce when necessary."
 msgstr ""
+"森のエルフに育てられた馬は通常の馬達よりもずっと機敏な一方、だいぶ気まぐれな"
+"ために手懐けることはずっと大変です。 これらエルフのポニーに訓練には長い年月が"
+"必要ですが、一旦飼い慣らしてしまえば何よりもも忠実で献身的な騎獣となります。"
+"この特別な馬達に乗ることでエルフの斥候（Elvish Scout）は深い森を尋常では無い"
+"速度で駆け抜けることができます。一方で、開けた平地でも他の騎兵に勝るとも劣り"
+"ません。彼ら斥候はある程度の剣術と弓術を身につけていますが、その最大の長所は"
+"その高すぎる機動性を使った効率的な索敵と敵の裏をかくことにあります。彼らは多"
+"くの場合はメッセンジャーとして働きますが、時には戦線の緊急支援や援軍となる巡"
+"視隊の捜索を行ったりもします。"
 
 #. [unit_type]: id=Elvish Shaman, race=elf
 #: data/core/units/elves/Shaman.cfg:4
@@ -2614,6 +2689,14 @@ msgid ""
 "elves have honed their art to its highest form and are the undisputed "
 "masters of archery."
 msgstr ""
+"正式な肩書きではありませんが、最も才能に溢れたエルフの射撃手には「狙撃手」と"
+"いう称号が贈られることがあります。その技術はまさに神がかっており、エルフの基"
+"準から見ても奇跡と称されるほどです。一説には、向かってくる矢を中空で打ち抜"
+"き、一本目の矢が目標に向かって飛んでいる間に二本目を放つことができて、そして"
+"それらの矢が全て鋼の鎧を貫く威力を持っていると言われます。馬上の騎士を一射で"
+"射落とし、重装兵でもわずか数射で倒してしまうという噂もあります。エルフの狙撃"
+"手（Elvish Sharpshooter）は弓術を極限まで磨き上げた誰もが認める最高の射手で"
+"す。"
 
 #. [female]
 #: data/core/units/elves/Sharpshooter.cfg:81
@@ -2764,6 +2847,16 @@ msgid ""
 "to goblins, recognize that picking a fight with the rider is also picking a "
 "fight with jaws that strike faster than a sword, and almost as hard."
 msgstr ""
+"戦場での経験は狼と乗り手の双方の戦闘力を向上させましたが、同時に両者の結びつ"
+"きをも強くしました。人間の騎士はいつもと違う馬に乗って戦場に向かうこともあり"
+"ますが、彼らゴブリンの騎士（Goblin Knight）は完全に人狼一体の兵となっており、"
+"過度なまでに互いを大事にしています。\n"
+"\n"
+"オークの間で、この騎兵は例え乗り手だけの場合であっても通常のゴブリンよりも高"
+"位に序列されています。オークの兵卒達は自分たちがゴブリンよりも上位にあると感"
+"じていますが、彼らゴブリンの乗り手に喧嘩を売ることはその相方である狼に喧嘩を"
+"売ることにもなると理解しています。そして、あの顎が自分たちの剣よりも素早く、"
+"そして同程度に固いことも理解しています。"
 
 #. [unit_type]: id=Goblin Pillager, race=wolf
 #: data/core/units/goblins/Pillager.cfg:4
@@ -2848,19 +2941,6 @@ msgstr "ウルフライダー"
 
 #. [unit_type]: id=Wolf Rider, race=wolf
 #: data/core/units/goblins/Wolf_Rider.cfg:30
-#, fuzzy
-#| msgid ""
-#| "No one is quite sure how the practice of taming and riding wolves came "
-#| "into being, but the advantages of it for a goblin are obvious. Goblins "
-#| "are smaller and much weaker than their orcish kin, and are often tasked "
-#| "to the most dangerous and unwanted parts of a fight. Any who can manage "
-#| "to win themselves a mount have a much safer, and daresay, more amusing "
-#| "role in combat.\n"
-#| "\n"
-#| "Wolves, likely, could never support the weight of a man in plate, but a "
-#| "goblin in leather armor is a simple load to bear. Quite unlike horses, "
-#| "these mounts have a rather easy time traversing the mountains, though "
-#| "water and woods will still slow them down."
 msgid ""
 "No one is quite sure how the practice of taming and riding wolves came into "
 "being, but the advantages of it for a goblin are obvious. Goblins are much "
@@ -2878,13 +2958,13 @@ msgstr ""
 "狼を飼い馴らし、乗るという習慣がどのように生まれてきたかは誰も知りません。し"
 "かし、ゴブリンにとって狼に乗るということは多大なメリットがあります。ゴブリン"
 "は眷属であるオークと比べると小さく弱い生き物です。そのため、とても危険な任務"
-"や、戦ではあまり重要でない任務を押し付けられることもしばしばあります。一方で"
-"狼に乗ることができたゴブリンは、より安全になり、戦局に大きな影響を与えたり、"
-"戦においてより面白い役割を果たすこともできるでしょう。\n"
+"で誰もがやるたがらない任務を押し付けられることもしばしばあります。一方で狼に"
+"乗ることができたゴブリンは、戦においてより安全な役割を果たすことになりま"
+"す。\n"
 "\n"
-"狼はプレートアーマーを着た人間を支えることはできませんが、レザーアーマーを着"
-"たゴブリンを担ぐのは簡単です。馬とはまったく違って、狼は山を楽に横切ることが"
-"できます。しかし、水や森は彼らの歩みを遅くするでしょう。"
+"ほとんどの狼が武装したオークを乗せて満足に動くことはできない一方、大抵の狼は"
+"ゴブリンを乗せて動くことができます。馬とは違って狼は山を楽に横切ることができ"
+"ます。しかし、水や木々は彼らの歩みを遅くすることでしょう。"
 
 #. [unit_type]: id=Gryphon, race=gryphon
 #: data/core/units/gryphons/Gryphon.cfg:4
@@ -6494,22 +6574,3 @@ msgstr ""
 "\n"
 "ウーズは全く戦いを好みませんが怪力を持っています。しかしながら、動き回ったり"
 "することに慣れておらず、素早くもできません。"
-
-#~ msgid ""
-#~ "The Goblin ‘Knights’ have little in common with the men who share that "
-#~ "title, and the title is bestowed in mockery by their enemies. The "
-#~ "similarity is simply that they are the elite of the wolf riders, likely "
-#~ "promoted to their position by their success in some audacious raid.\n"
-#~ "\n"
-#~ "The wolves they are given are bred for speed and strength, making them "
-#~ "quite dangerous in combat."
-#~ msgstr ""
-#~ "ゴブリンの騎士（Goblin Knight）\n"
-#~ "\n"
-#~ "ゴブリンの「騎士」というのは人間族での同様に呼ばれる称号とはほとんど共通点"
-#~ "はありません。彼らの敵からそう呼ばれているだけなのです。類似点は、単に彼ら"
-#~ "が「ウルフライダー」のエリートであるという点だけです。おそらくは、何か向こ"
-#~ "うみずな襲撃で成功したという理由でその地位を獲得したのでしょう。\n"
-#~ "\n"
-#~ "彼等が与えられる狼は速度と力の面で優秀なものであるため、戦闘においては極め"
-#~ "て危険なものとなります。"
