--- a/po/wesnoth-dm/ja.po
+++ b/po/wesnoth-dm/ja.po
@@ -1,8 +1,8 @@
 # Translators:
-# RatArmy <broadbarredfirefish@gmail.com>, 2018
-# suto3, 2018
 # 堀 秀幸 <Hide.HORI@gmail.com>, 2018
 # 家庭的の人 <kateitekino_hito@yahoo.co.jp>, 2018
+# suto3, 2018
+# RatArmy <broadbarredfirefish@gmail.com>, 2019
 #
 msgid ""
 msgstr ""
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 18:29 UTC\n"
 "PO-Revision-Date: 2018-09-12 07:29+0000\n"
-"Last-Translator: 家庭的の人 <kateitekino_hito@yahoo.co.jp>, 2018\n"
+"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
