--- a/po/wesnoth-l/ja.po
+++ b/po/wesnoth-l/ja.po
@@ -1,6 +1,6 @@
 # Translators:
-# tamanegi, 2018
 # RatArmy <broadbarredfirefish@gmail.com>, 2019
+# tamanegi, 2019
 #
 msgid ""
 msgstr ""
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
 "PO-Revision-Date: 2018-09-12 07:30+0000\n"
-"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2019\n"
+"Last-Translator: tamanegi, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -106,12 +106,6 @@ msgstr "Dallben"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:22
-#, fuzzy
-#| msgid ""
-#| "In the Era of Turmoil, during the reign of King Garard II, the border "
-#| "towns of Delwyn and Dallben in the province of Annuvin grew increasingly "
-#| "dissatisfied with the King’s rule. Being preoccupied with the great wars, "
-#| "the King was unable to send adequate forces to protect the frontier."
 msgid ""
 "In the Era of Turmoil, during the reign of King Garard II, the border towns "
 "of Delwyn and Dallben in the Province of Annuvin grew increasingly "
@@ -736,12 +730,6 @@ msgstr ""
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:188
-#, fuzzy
-#| msgid ""
-#| "You do not understand. We attacked a Wesnoth army patrol. Not only that, "
-#| "the leader was no man I had ever seen in Annuvin province before. Never "
-#| "has one been sent out here as a patrol captain who was so ruthless and "
-#| "cruel."
 msgid ""
 "You do not understand. We attacked a Wesnoth army patrol. Not only that, the "
 "leader was no man I had ever seen in Annuvin Province before. Never has one "
@@ -994,11 +982,6 @@ msgstr ""
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:207
-#, fuzzy
-#| msgid ""
-#| "What can we do then? We have brought with us many from Annuvin province "
-#| "who are willing to fight, but our families are still at home. They will "
-#| "not last long if the Queen’s patrols return."
 msgid ""
 "What can we do then? We have brought with us many from Annuvin Province who "
 "are willing to fight, but our families are still at home. They will not last "
@@ -2217,11 +2200,6 @@ msgstr "砦の中にいた者が生きて出られることはないでしょう
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:811
-#, fuzzy
-#| msgid ""
-#| "After more than a week of fierce fighting, the main body of Asheviere’s "
-#| "host arrived from Weldyn. The battle was soon finished. Every last man "
-#| "from the province of Annuvin was executed."
 msgid ""
 "After more than a week of fierce fighting, the main body of Asheviere’s host "
 "arrived from Weldyn. The battle was soon finished. Every last man from the "
