--- a/po/wesnoth-multiplayer/ja.po
+++ b/po/wesnoth-multiplayer/ja.po
@@ -1,6 +1,7 @@
 # Translators:
 # RatArmy <broadbarredfirefish@gmail.com>, 2018
 # 家庭的の人 <kateitekino_hito@yahoo.co.jp>, 2018
+# tamanegi, 2019
 #
 msgid ""
 msgstr ""
@@ -8,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
 "PO-Revision-Date: 2018-07-11 10:25+0000\n"
-"Last-Translator: 家庭的の人 <kateitekino_hito@yahoo.co.jp>, 2018\n"
+"Last-Translator: tamanegi, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -746,22 +747,6 @@ msgstr "Blum Duk"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:147
-#, fuzzy
-#| msgid ""
-#| "Blum Duk was renowned among his goblin clan for having tamed one of the "
-#| "Dire Wolves of the mountains, and he had the courage to match. His "
-#| "leadership and skills alone were what kept the area’s goblins alive "
-#| "despite human and elvish menaces. Rumor had it that his wolf had slain "
-#| "fifty men and a hundred Elves.\n"
-#| "Thus, when he heard of the awful monster that was inhabiting the area, it "
-#| "was only natural that he ride out alone to face it. All the other goblins "
-#| "expected him to slay the creature easily and drag back its carcass to "
-#| "feast on.\n"
-#| "He was in for quite a shock. As soon as he saw the Basilisk, Blum Duk "
-#| "cowered in fright. He tried to wheel his wolf around to run away, but it "
-#| "wouldn’t move. As the creature stalked towards him, he screamed his last "
-#| "words: Good Gog, dog, are yer legs made of stone?!\n"
-#| "(inscribed by Elvish Pillager)"
 msgid ""
 "Blum Duk was renowned among his goblin clan for having tamed one of the Dire "
 "Wolves of the mountains, and he had the courage to match. His leadership and "
@@ -785,10 +770,12 @@ msgstr ""
 "み、その地のゴブリンは生き延びることができた。人間やエルフ族の脅威にもかかわ"
 "らず。うわさでは、彼の狼は 50 人の人間と 100 人のエルフを殺したと言われてい"
 "る。\n"
+"\n"
 "従って、彼がこの地に恐ろしいモンスターが住んでいることを聞いたとき、彼が一人"
 "で乗り込んできてモンスターに対峙したのはとても自然なことだった。他のすべての"
 "ゴブリンは簡単にその生き物を倒し、その死骸を持ち帰って宴会を開くだろうと考え"
 "ていた。\n"
+"\n"
 "彼は大きなショックを受けていた。バジリスクを見てすぐに、Blum Duk は恐怖で縮こ"
 "まった。彼は狼を振り返らせて逃げようとしたが、狼は動かなかった。モンスターが"
 "彼に向かってきたとき、彼は最後の言葉を叫んだ。「有能な犬の神よ、おまえの足は"
@@ -826,7 +813,7 @@ msgstr ""
 #. [side]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:162
 msgid "Turin's Monster of the Lake"
-msgstr ""
+msgstr "Turin の湖の怪物"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:165
@@ -849,7 +836,7 @@ msgstr ""
 #. [side]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:170
 msgid "The Spider"
-msgstr ""
+msgstr "「クモ」"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:173
@@ -895,23 +882,6 @@ msgstr "Bramwythl"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:196
-#, fuzzy
-#| msgid ""
-#| "Bramwythl the Wose was always considered a slow, taciturn fellow, even by "
-#| "other Woses. More than any other Wose, he enjoyed simply standing alone "
-#| "in the sun, arms upraised, admiring the beauty of the empty sky. Once, "
-#| "even, he confided in a fellow that his greatest wish was to be able to "
-#| "bask forever in the sun’s glory.\n"
-#| "However, not long after, the local wose community heard of the approach "
-#| "of a horrible monster, powerful enough to easily destroy the few woses "
-#| "that lived in the area. They quickly moved off (quickly for Woses, "
-#| "anyway), but Bramwythl was left behind — in their haste, no one had "
-#| "remembered to find him and tell him of the danger.\n"
-#| "He was taken quite unawares by the Basilisk, and turned to stone before "
-#| "he even recognized the beast. His petrified form still stands there "
-#| "today, warmed by the sun’s rays, under an open sky. His greatest wish has "
-#| "been granted.\n"
-#| "(inscribed by Elvish Pillager)"
 msgid ""
 "Bramwythl the Wose was always considered a slow, taciturn fellow, even by "
 "other Woses. More than any other Wose, he enjoyed simply standing alone in "
@@ -936,11 +906,13 @@ msgstr ""
 "腕を高く上げ、雲ひとつない空の美しさをたたえながら。かつて、彼は一人の仲間に"
 "偉大な願望を打ち明けた。それは永遠に太陽の栄光の中で日光を浴びていたいという"
 "ものだった。\n"
+"\n"
 "しかしながら、それからしばらくして、土地のウーズの群衆が恐ろしいモンスターが"
 "近づいてきていることを聞いた。そのモンスターはその地に住んでいた何体かのウー"
 "ズを簡単に倒してしまうほどの強さだった。彼らは急いでそこを立ち去ったが（とに"
 "かく、ウーズにしては急いで）、Bramwythl はあとに残された。彼らはあまりに急い"
 "でいたので、彼を見つけて危険を知らせる者は誰もいなかったのだ。\n"
+"\n"
 "彼はほとんど気がつかないうちにバジリスクに捕らえられ、その獣に気づく前に石に"
 "変えられてしまった。彼の石化した姿はここに今も立っていて、太陽の光で暖められ"
 "ている。雲ひとつない空の下で。彼の偉大な願望はかなったのだ。\n"
