--- a/po/wesnoth-sota/ja.po
+++ b/po/wesnoth-sota/ja.po
@@ -1,8 +1,9 @@
 # Translators:
 # IWAI, Masaharu <iwaim.sub@gmail.com>, 2018
-# 堀 秀幸 <Hide.HORI@gmail.com>, 2018
 # 家庭的の人 <kateitekino_hito@yahoo.co.jp>, 2018
+# 堀 秀幸 <Hide.HORI@gmail.com>, 2018
 # RatArmy <broadbarredfirefish@gmail.com>, 2019
+# tamanegi, 2019
 #
 msgid ""
 msgstr ""
@@ -10,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
 "PO-Revision-Date: 2018-05-06 10:23+0000\n"
-"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2019\n"
+"Last-Translator: tamanegi, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -307,6 +308,8 @@ msgid ""
 "A wolf! This journey may be more dangerous than I thought. If we need to, I "
 "suppose we could rest inside a farmer's or woodcutter's fence."
 msgstr ""
+"オオカミだ！ この旅は思ったよりも危険みたい。 けど、農家や木こりが丈夫な柵を"
+"築いてるはず。そこまで逃げ込めば、野生動物から身を守れるかな。"
 
 #. [message]: speaker=Ardonna
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg:344
@@ -427,37 +430,37 @@ msgstr "Caradoc"
 #. [message]: speaker=Ardonna
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg:392
 msgid "Oh, hello friend! I didn't know you were hiding in there."
-msgstr ""
+msgstr "あ、こんにちは！ここはあなたのお家だったの？"
 
 #. [message]: speaker=Ardonna
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg:398
 msgid "Oh, hello! You're a handsome one."
-msgstr ""
+msgstr "あ、こんにちは！あなたなかなかカッコいいね。"
 
 #. [message]: speaker=Ardonna
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg:415
 msgid "Hey, come back! I didn't mean to frighten you."
-msgstr ""
+msgstr "ねえ、戻ってきて！あなたを怖がらせるつもりはないから。"
 
 #. [message]: speaker=Ardonna
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg:419
 msgid "Maybe I could attract it if I jingled some coins."
-msgstr ""
+msgstr "コインで音を鳴らしたら気をひけるかも。"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg:442
 msgid "Right-click adjacent to your leader to summon the bat."
-msgstr ""
+msgstr "リーダーの隣のヘクスで右クリックするとコウモリを召喚できます。"
 
 #. [set_menu_item]: id=summon_bat
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg:450
 msgid "Summon the Bat (20 gold)"
-msgstr ""
+msgstr "コウモリを呼び出す（20 ゴールド）"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg:490
 msgid "You don't have enough gold to summon the bat."
-msgstr ""
+msgstr "コウモリを呼び出すにはゴールドが足りません。"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg:572
@@ -1067,7 +1070,7 @@ msgstr "どうしたかって？死んだ。"
 #. [message]: speaker=Ardonna
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/05_Blackwater.cfg:328
 msgid "Keep quiet about that."
-msgstr ""
+msgstr "それは言わないで。"
 
 #. [message]: speaker=Gweddyn
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/05_Blackwater.cfg:332
@@ -2283,6 +2286,8 @@ msgid ""
 "When the mage isss dead and her dead horde put to ressst, we agree. We will "
 "have been compensssated adequately."
 msgstr ""
+"あの魔術師ぃぃを始末しぃ、死体ぃの軍勢ぃぃを眠らせてぇからならぁ、同意す"
+"るぅ。適切なぁ料金を払うぅ。"
 
 #. [message]: speaker=Ardonna
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg:158
@@ -2292,7 +2297,7 @@ msgstr "またやらなきゃ…"
 #. [message]: speaker=Ardonna
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg:167
 msgid "Good. Now I can practice recruiting ghosts."
-msgstr ""
+msgstr "やったね。これでゴースト使役の練習ができるかな。"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg:173
@@ -2339,6 +2344,10 @@ msgid ""
 "frightening and forbidden by my clan. I sssubmit to your power. Now that I "
 "know you are female, I will find it easier as it isss the way of my kind."
 msgstr ""
+"私は星ぃ々ぃぃの間にある闇ぃを凝視している。その闇ぃは虚無によって威圧された"
+"ものではないぃぃ。しかし、お前の思考はまた別の闇ぃぃを持っている、驚くべきも"
+"のでもあり、我が一族では禁じられていぃるものだ。私はお前の力を受け入ぃぃれ"
+"る。それこそが我が種族の進むべき道ぃぃなのだ。"
 
 #. [message]: speaker=Ardonna
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg:236
@@ -3853,17 +3862,6 @@ msgstr "エピローグ"
 
 #. [part]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg:16
-#, fuzzy
-#| msgid ""
-#| "10 VII, 23 YW — Final Entry\n"
-#| "\n"
-#| "We prevailed today on the field, but our victory was somewhat bitter. "
-#| "<i>Everyone</i> was afraid or angry and immediately attacked us instead "
-#| "of listening to our news. I realize now... the world is not ready for our "
-#| "knowledge. I give up on all of them. I am going to live in the old troll "
-#| "city and learn the applications of mountain fire. In some future time, "
-#| "less conservative attitudes will dominate, and I can certainly afford to "
-#| "wait. In the meantime, we are doing what we can to hasten that day."
 msgid ""
 "10 VII, 23 YW — Final Entry\n"
 "\n"
@@ -3883,23 +3881,14 @@ msgstr ""
 "\n"
 "私たちは今日の戦いを切り抜けたけど、私たちの勝利は苦しいものだった。 <i>みん"
 "な</i>が私たちを恐れ、怒り、私たちの話を聞かずに攻撃してきた。 今になって気付"
-"いたけど...この世界には私たちの知識は早すぎたみたい。 彼らを説得するのはあき"
-"らめちゃった。 私はあの古いトロルの町に住み着いて山の炎の応用について学ぶつも"
-"り。 いつかは保守的な人も減るだろうから、それまで私は待っとくよ。 早くその日"
-"が来てほしいな。"
+"いたけど...この世界には私たちの知識は早すぎたみたい。 死。 根源的な恐怖である"
+"それを克服するってことをみんな理解できないみたい。 それで私たちの姿を見ると本"
+"能的な恐怖にかられちゃう。 だから彼らを説得するのはあきらめちゃった。 私はあ"
+"の古いトロルの町に住み着いて山の炎の応用について学ぶつもり。 いつかは保守的な"
+"人も減るだろうから、それまで私は待っとくよ。 早くその日が来てほしいな。"
 
 #. [then]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg:31
-#, fuzzy
-#| msgid ""
-#| "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. "
-#| "Most of the others are going with him. I wish them success. Vendraxis now "
-#| "knows what he must learn to replicate our metamorphosis. He will use the "
-#| "years left to him in study and practice while he attempts to change the "
-#| "attitudes of his people. As for me, I have placed some spells on my "
-#| "journal to help keep it from harm, and I will make it conspicuous on this "
-#| "battlefield. I hope that it will eventually make its way into the hands "
-#| "of someone in Tath who is willing to learn the secrets of the ancients."
 msgid ""
 "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. Most "
 "of the others are going with him. I wish them success. Vendraxis now knows "
@@ -3914,20 +3903,14 @@ msgid ""
 msgstr ""
 "Ras-Tabahnは再び力を付けて、Elensefarに向かうらしい。多くの者たちは彼に付いて"
 "いった。Vendraxisは私たちの変身を真似するために何をするべきかを理解した。今、"
-"彼は仲間たちの考えを変えようとしているらしい。私は、この日誌が傷つかないよう"
-"に呪文を掛けておいた。日誌をこの戦場の目立つところに置いておこう。いつかは日"
-"誌がTathの誰かに渡り、その人が古代の秘密を学んでくれるといいな。"
+"彼は仲間たちの考えを変えようとしているらしい。私は、日誌をこの戦場の目立つと"
+"ころに置いておくことにした。大抵の人は怖がって破棄しようとするだろうから、日"
+"誌が傷つかないように呪文を掛けておいた。こうしておけばいつかは日誌が先進的な"
+"人の手に渡るだろう。Tath には魔術師がたくさん住んでいるし、早く古代の秘密を学"
+"びたい人の手に渡ってくれるといいな。"
 
 #. [else]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg:34
-#, fuzzy
-#| msgid ""
-#| "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. "
-#| "Most of the others are going with him. I wish them success. As for me, I "
-#| "have placed some spells on my journal to help keep it from harm, and I "
-#| "will make it conspicuous on this battlefield. I hope that it will "
-#| "eventually make its way into the hands of someone in Tath who is willing "
-#| "to learn the secrets of the ancients."
 msgid ""
 "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. Most "
 "of the others are going with him. I wish them success. As for me, I will "
@@ -3939,9 +3922,10 @@ msgid ""
 "ancients."
 msgstr ""
 "Ras-Tabahnは再び力を付けて、Elensefarに向かうらしい。多くの者たちは彼に付いて"
-"いった。彼らが成功するといいな。私は、この日誌が傷つかないように呪文を掛けて"
-"置いた。日誌をこの戦場の目立つところに置いておこう。いつかは日誌がTathの誰か"
-"に渡り、その人が古代の秘密を学んでくれるといいな。"
+"いった。私は、日誌をこの戦場の目立つところに置いておくことにした。大抵の人は"
+"怖がって破棄しようとするだろうから、日誌が傷つかないように呪文を掛けておい"
+"た。こうしておけばいつかは日誌が先進的な人の手に渡るだろう。Tath には魔術師が"
+"たくさん住んでいるし、早く古代の秘密を学びたい人の手に渡ってくれるといいな。"
 
 #. [unit_type]: id=Bone Bird, race=undead, description=
 #: data/campaigns/Secrets_of_the_Ancients/units/Bone_Bird.cfg:4
