--- a/po/wesnoth-sotbe/ja.po
+++ b/po/wesnoth-sotbe/ja.po
@@ -1,6 +1,6 @@
 # Translators:
-# RatArmy <broadbarredfirefish@gmail.com>, 2018
 # tamanegi, 2018
+# RatArmy <broadbarredfirefish@gmail.com>, 2019
 #
 msgid ""
 msgstr ""
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
 "PO-Revision-Date: 2018-05-18 00:11+0000\n"
-"Last-Translator: tamanegi, 2018\n"
+"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -453,27 +453,27 @@ msgstr "Lanbec'h を倒す"
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:31
 msgid "Resist until your people are ready to go (turn 12)"
-msgstr ""
+msgstr "出発の準備が整うまで抵抗する（ターン 12 まで）"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:34
 msgid "Resist until your people are ready to go (turn 13)"
-msgstr ""
+msgstr "出発の準備が整うまで抵抗する（ターン 13 まで）"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:37
 msgid "Resist until your people are ready to go (turn 14)"
-msgstr ""
+msgstr "出発の準備が整うまで抵抗する（ターン 14 まで）"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:45
 msgid "Then move Kapou’e to the signpost in the northeast"
-msgstr ""
+msgstr "そして Kapou’e を北東の道しるべまで移動させる"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:52
 msgid "Move Kapou’e to the signpost in the northeast"
-msgstr ""
+msgstr "Kapou’e を北東の道しるべまで移動させる"
 
 #. [side]: type=General, id=Lanbec'h
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:87
@@ -3950,7 +3950,7 @@ msgstr "良い朝だな、Shan Taum！"
 #. [message]: speaker=Shan Taum
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:204
 msgid "What... Kapou’e! What in the frozen Northlands are you doing here?!"
-msgstr ""
+msgstr "何だと…… Kapou’e！凍てついた北の大地で一体何をしているのだ、貴様？！"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:209
