--- a/po/wesnoth-tsg/ja.po
+++ b/po/wesnoth-tsg/ja.po
@@ -2100,8 +2100,6 @@ msgstr "こいつらはもっと邪悪な存在の手先に過ぎない。"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:530
-#, fuzzy
-#| msgid "One less evil in this forest."
 msgid "One fewer evil in this forest."
 msgstr "森にまだ手下が残っている。"
 
@@ -3763,10 +3761,6 @@ msgstr ""
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg:237
-#, fuzzy
-#| msgid ""
-#| "These forts and ill-equipped for holding back so many undead. I am "
-#| "certain we will be slaughtered if we try to fight them here!"
 msgid ""
 "These forts are ill-equipped for holding back so many undead. I am certain "
 "we will be slaughtered if we try to fight them here!"
@@ -3836,13 +3830,6 @@ msgstr "お前からそんな言葉をもらえるとは思っていなかった
 
 #. [message]: speaker=Urza Afalas
 #: data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg:269
-#, fuzzy
-#| msgid ""
-#| "All things end one way or another. Alas, I would have liked to see my "
-#| "home in Westin one more time, but I am too tired. Tired of running, and "
-#| "tired of fleeing from these undead, who corrupted and consumed my "
-#| "brothers. You may think us criminals and outlaws, but we are still human "
-#| "and we still know loyalty and gratitude, sir knights."
 msgid ""
 "All things end one way or another. Alas, I would have liked to see my home "
 "in Westin one more time, but I am too tired. Tired of running, and tired of "
@@ -3851,10 +3838,9 @@ msgid ""
 "loyalty and gratitude."
 msgstr ""
 "物事はいつかは終わるもんだ。それにな、もう一度 Westin で暮らしてみるのも良い"
-"とは思っていたが、どうでも良くなってきた。走る続けるのもうんざりだし、兄弟達"
+"とは思っていたが、どうでも良くなってきた。走り続けるのもうんざりだし、兄弟達"
 "を堕とし、エサにしたアンデッドから逃げつづけるのもうんざりだ。俺は無法者の犯"
-"罪者ではあるが、それでも人間ではあるし、恩知らずというわけではないんだぞ、騎"
-"士様。"
+"罪者ではあるが、それでも人間ではあるし、恩知らずというわけではないんだぞ。"
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg:273
