--- a/po/wesnoth-lib/fr.po
+++ b/po/wesnoth-lib/fr.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Wesnoth_Lib-1.12\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 04:26+0300\n"
-"PO-Revision-Date: 2019-02-02 18:44+0100\n"
-"Last-Translator: Gérard Bodin <gbodin.qc@gmail.com>\n"
+"PO-Revision-Date: 2019-04-10 20:44+0200\n"
+"Last-Translator: Syll <syll-dev@laposte.net>\n"
 "Language-Team: French <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -250,11 +250,6 @@ msgstr "Sables du désert"
 
 #. [terrain_type]: id=desert
 #: data/core/terrain.cfg:298
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Deserts'</italic> have a somewhat different composition "
-#| "than small sand pits or beaches, however for gameplay purposes they are "
-#| "identical. See <ref>dst='..terrain_sand' text='sand'</ref>."
 msgid ""
 "<italic>text='Deserts'</italic> have a somewhat different composition than "
 "small sand pits or beaches, however for gameplay purposes they are "
@@ -262,7 +257,7 @@ msgid ""
 msgstr ""
 "Les <italic>text='déserts'</italic> sont en réalité assez différents des "
 "plages et des petites étendues de sables, mais pour le jeu il n'y a aucune "
-"différence. Voir <ref>dst='..terrain_sand' text='sable'</ref>."
+"différence. Voir <ref>dst='terrain_sand' text='sable'</ref>."
 
 #. [terrain_type]: id=sand_beach
 #. [terrain_type]: id=sand
@@ -1685,15 +1680,6 @@ msgstr "Sable"
 
 #. [terrain_type]: id=reef
 #: data/core/terrain.cfg:2824
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Coastal reefs'</italic> are shallows formed by stone, coral "
-#| "and sand.\n"
-#| "This provides most land units with a more steady footing and defensive "
-#| "positions than wading in shallow water normally would and also grants "
-#| "most water-dwelling races an exceptionally high defense.\n"
-#| "\n"
-#| "Merfolk and Naga both receive 70% defense on coastal reefs."
 msgid ""
 "<italic>text='Coastal reefs'</italic> are shallows formed by stone, coral "
 "and sand.\n"
@@ -1736,17 +1722,6 @@ msgstr ""
 
 #. [terrain_type]: id=swamp_water
 #: data/core/terrain.cfg:2853
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Swamps'</italic> represent any sort of wetlands.\n"
-#| "Swamps slow down nearly everyone, and inhibit their ability to defend "
-#| "themselves. An exception to this is any race bodily skilled in navigating "
-#| "water; these receive both full movement and a defensive bonus. Those that "
-#| "make their living in the wetlands are also adept at using this terrain "
-#| "for cover.\n"
-#| "\n"
-#| "Most units make do with 30% defense in swamps. Merfolk, naga, and "
-#| "saurians all generally enjoy 60%."
 msgid ""
 "<italic>text='Swamps'</italic> represent any sort of wetlands.\n"
 "Swamps slow down nearly everyone, and inhibit their ability to defend "
@@ -1771,18 +1746,6 @@ msgstr ""
 
 #. [terrain_type]: id=shallow_water
 #: data/core/terrain.cfg:2866
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Shallow water'</italic> represents any body of water deep "
-#| "enough to come up to roughly a man’s waist. This is enough to slow down "
-#| "nearly anyone and leave them wide open to attack. Dwarves, given that the "
-#| "water reaches up almost to their heads, have an extremely hard time of "
-#| "this. The exception is any race whose bodies naturally lend themselves to "
-#| "swimming, for which they receive a considerable defensive bonus and full "
-#| "movement.\n"
-#| "\n"
-#| "Most units make do with 20 to 30% defense in shallow water, whereas both "
-#| "naga and merfolk enjoy 60%."
 msgid ""
 "<italic>text='Shallow water'</italic> represents any body of water deep "
 "enough to come up to roughly a man’s waist. This is enough to slow down "
@@ -1853,15 +1816,6 @@ msgstr ""
 
 #. [terrain_type]: id=deep_water
 #: data/core/terrain.cfg:2907
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Deep water'</italic> represents any body of water deep "
-#| "enough to cover a man’s head.\n"
-#| "Most units cannot enter deep water: it is the domain of units which can "
-#| "either fly, or are exceptionally strong swimmers.\n"
-#| "\n"
-#| "Merfolk and naga both receive 50% defense in deep water, with full "
-#| "movement."
 msgid ""
 "<italic>text='Deep water'</italic> represents any body of water deep enough "
 "to cover a man’s head.\n"
@@ -2048,14 +2002,12 @@ msgstr "Rechercher"
 
 #. [label]: id=no_options_notice
 #: data/gui/macros/custom_options_tree.cfg:26
-#, fuzzy
-#| msgid "Configure settings for the selected custom modifications."
 msgid ""
 "There are no custom options available for the selected era, game, or "
 "modification."
 msgstr ""
-"Configurer les paramètres pour les modifications personnalisées "
-"sélectionnées."
+"Il n'existe pas d'options personnalisées pour cette ère, partie ou "
+"modification."
 
 #. [button]: id=reset_option_values
 #. [button]: id=btn_reset_hotkeys
@@ -2070,10 +2022,8 @@ msgstr "Par défaut"
 
 #. [label]
 #: data/gui/macros/player_list_panel.cfg:30
-#, fuzzy
-#| msgid "Choose Player"
 msgid "Connected Players"
-msgstr "Choisir un joueur"
+msgstr "Joueurs connectés"
 
 #. [toggle_button]: id=sort_0
 #. [label]
@@ -2610,10 +2560,8 @@ msgstr "Difficulté"
 
 #. [scroll_label]: id=message
 #: data/gui/window/campaign_difficulty.cfg:83
-#, fuzzy
-#| msgid "Select difficulty:"
 msgid "Select difficulty level:"
-msgstr "Sélectionnez la difficulté :"
+msgstr "Sélectionnez le niveau de difficulté :"
 
 #. [label]
 #: data/gui/window/chat_log.cfg:36
@@ -4670,7 +4618,7 @@ msgstr "T"
 #. [toggle_button]: id=sort_4
 #: data/gui/window/preferences/02_hotkeys.cfg:129
 msgid "Available at titlescreen"
-msgstr "Disponible dans l'écran d’accueil"
+msgstr "Disponible dans l'écran d'accueil"
 
 #. [button]: id=btn_add_hotkey
 #: data/gui/window/preferences/02_hotkeys.cfg:241
@@ -5479,10 +5427,8 @@ msgid "operating_system^<unknown>"
 msgstr "<inconnu>"
 
 #: src/font/text.cpp:789
-#, fuzzy
-#| msgid "The text contains invalid Pango markup: "
 msgid "The text contains invalid markup: "
-msgstr "Le texte contient une balise Pango invalide : "
+msgstr "Le texte contient une balise invalide : "
 
 #. TRANSLATORS: Formats a two-element conjunctive list.
 #: src/formula/string_utils.cpp:251
@@ -5676,16 +5622,12 @@ msgid "addons_order^Type ($order)"
 msgstr "Type ($order)"
 
 #: src/gui/dialogs/addon/manager.cpp:228
-#, fuzzy
-#| msgid "addons_order^Last updated ($datelike_order)"
 msgid "addons_order^Last updated ($order)"
-msgstr "Dernière mise à jour ($datelike_order)"
+msgstr "Dernière mise à jour ($order)"
 
 #: src/gui/dialogs/addon/manager.cpp:231
-#, fuzzy
-#| msgid "addons_order^First uploaded ($datelike_order)"
 msgid "addons_order^First uploaded ($order)"
-msgstr "Date d'envoi initiale ($datelike_order)"
+msgstr "Date d'envoi initiale ($order)"
 
 #: src/gui/dialogs/addon/manager.cpp:260 src/gui/widgets/addon_list.cpp:103
 msgid "addon_state^Not installed"
@@ -6222,7 +6164,7 @@ msgstr "Parties : $num_shown affichées sur $num_total"
 
 #: src/gui/dialogs/multiplayer/lobby.cpp:452
 msgid "Era:"
-msgstr ""
+msgstr "Ère :"
 
 #: src/gui/dialogs/multiplayer/lobby.cpp:469
 msgid "Settings:"
@@ -6253,10 +6195,6 @@ msgid "Use map settings:"
 msgstr "Utiliser les paramètres de la carte :"
 
 #: src/gui/dialogs/multiplayer/lobby.cpp:486
-#, fuzzy
-#| msgid ""
-#| "One or more add-ons need to be installed\n"
-#| "in order to join this game."
 msgid ""
 "One or more items need to be installed\n"
 "in order to join this game."
@@ -6584,16 +6522,12 @@ msgid "whisper to $receiver"
 msgstr "chuchoter à $receiver"
 
 #: src/gui/widgets/chatbox.cpp:396
-#, fuzzy
-#| msgid ""
-#| "Whisper session with <i>“$name”</i> started. If you do not want to "
-#| "receive messages from this user, type <i>/ignore $name</i>"
 msgid ""
 "Whisper session with <i>“$name”</i> started. If you do not want to receive "
 "messages from this user, type <i>/ignore $name</i>\n"
 msgstr ""
 "Une conversation privée avec <i>\"$name\"</i> a débuté. Si vous ne voulez "
-"pas recevoir les messages de cet utilisateur, tapez <i>/ignore $name</i>"
+"pas recevoir les messages de cet utilisateur, tapez <i>/ignore $name</i>\n"
 
 #: src/gui/widgets/chatbox.cpp:400
 msgid "Room <i>“$name”</i> joined"
@@ -6936,10 +6870,8 @@ msgid "Continue Network Game"
 msgstr "Reprendre le jeu en réseau"
 
 #: src/hotkey/hotkey_command.cpp:106
-#, fuzzy
-#| msgid "Available at titlescreen"
 msgid "Quit to Titlescreen"
-msgstr "Disponible dans l'écran d’accueil"
+msgstr "Quitter pour l'écran d’accueil"
 
 #: src/hotkey/hotkey_command.cpp:107
 msgid "Set Team Label"
@@ -7800,7 +7732,7 @@ msgstr ""
 #~ msgstr "Touche"
 
 #~ msgid "Quit to Main Menu"
-#~ msgstr "Quitter pour l'écran d'acceuil"
+#~ msgstr "Quitter pour l'écran d'accueil"
 
 # Un accord à faire peut-être ?
 # Qu'est-ce qui est illimité ?
