updated Dutch translation

--- a/po/wesnoth-ai/nl.po
+++ b/po/wesnoth-ai/nl.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2019-04-11 15:57+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2019-04-16 07:41+0200\n"
+"Last-Translator: Merijn de Vet <merijndevet@hotmail.com>\n"
 "Language-Team: \n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
@@ -2835,21 +2835,6 @@ msgstr ""
 
 #. [message]: speaker=Uralt
 #: data/ai/micro_ais/scenarios/simple_attack.cfg:176
-#, fuzzy
-#| msgid ""
-#| "Hahahahaha !! I have given special instruction to my Soulless to attack "
-#| "all you almost-advanced units first. Also watch how those same Soulless "
-#| "will throw themselves mercilessly at your pitiful soldiers after that, "
-#| "saving my more valuable skeleton minions for later.  I have taken the "
-#| "term 'disposable units' to a whole new level. Watch in awe !!\n"
-#| "\n"
-#| "<i>Translation: The undead side includes two instances of the Simple "
-#| "Attack Micro AI.  The first makes the Soulless attack all units 1 XP from "
-#| "leveling up, such that they can be eliminated afterward.  The second "
-#| "executes all remaining attacks possible by Soulless (and Walking "
-#| "Corpses), without regard for their own safety.  Only after that does the "
-#| "default Wesnoth attack mechanism kick in to attack with the remaining "
-#| "units (skeletons).</i>"
 msgid ""
 "Hahahahaha!! I have given special instruction to my Soulless to attack all "
 "your almost-advanced units first. Also watch how those same Soulless will "
@@ -2864,18 +2849,18 @@ msgid ""
 "for their own safety.  Only after that does the default Wesnoth attack "
 "mechanism kick in to attack with the remaining units (skeletons).</i>"
 msgstr ""
-"Hahahahaha !! Ik heb speciale instructies aan mijn Ziellozen gegeven om "
-"eerst ale bijna-gepromoveerde eenheden aan te vallen. Let erop hoe diezelfde "
+"Hahahahaha!! Ik heb speciale instructies aan mijn Ziellozen gegeven om eerst "
+"ale bijna-gepromoveerde eenheden aan te vallen. Let erop hoe diezelfde "
 "Ziellozen zich daarna genadeloos zullen storten op je meelijwekkende "
-"soldaten, en de skeletten bewaren om voor mij te kunnen vechten later.  Ik "
-"heb de term 'wegwerpeenheden' naar een geheel nieuw niveau gebracht. Kijk en "
-"leer !!\n"
+"soldaten, en de skeletten bewaren om voor mij te kunnen vechten. Ik heb de "
+"term 'wegwerpeenheden' naar een geheel nieuw niveau gebracht. Kijk en "
+"leer!!\n"
 "\n"
 "<i>Vertaling: De ondode kant bevat twee exemplaren van de Simpele Aanval "
 "Micro AI. De eerste zorgt ervoor dat de Ziellozen alle eenheden die 1 XP "
 "verwijderd zijn van promotie aanvallen, zodat ze daarna kunnen worden "
 "geëlimineerd. De tweede voert alle resterende aanvallen uit die mogelijk "
-"zijn door een Ziellove (en Wandelend Lijk), ongeacht hun eigen veiligheid. "
+"zijn door een Zielloze (en Wandelend Lijk), ongeacht hun eigen veiligheid. "
 "Pas daarna begint het standaard Wesnoth-aanvalsmechanisme om aan te vallen "
 "met de resterende eenheden (skeletten).</i>"
 
