updated Ukrainian translation

--- a/po/wesnoth/uk.po
+++ b/po/wesnoth/uk.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 16:10+0300\n"
-"PO-Revision-Date: 2019-01-29 14:17+0200\n"
+"PO-Revision-Date: 2019-04-18 00:31+0300\n"
 "Last-Translator: AncientGeneral <greatgeneral12 {AT} gmail.com>\n"
 "Language-Team: \n"
 "Language: uk\n"
@@ -7601,7 +7601,7 @@ msgstr "Тип: "
 
 #: src/reports.cpp:235
 msgid "Side:"
-msgstr ""
+msgstr "Сторона:"
 
 #: src/reports.cpp:257
 msgid "Level: "
@@ -7809,16 +7809,12 @@ msgstr[1] "Атаки"
 msgstr[2] "Атак"
 
 #: src/reports.cpp:1144
-#, fuzzy
-#| msgid "Time of day: "
 msgid "Time of day schedule:"
-msgstr "Час дня: "
+msgstr "Розклад часу доби:"
 
 #: src/reports.cpp:1176
-#, fuzzy
-#| msgid "Time of day: "
 msgid "Time of day:"
-msgstr "Час дня: "
+msgstr "Час доби:"
 
 #: src/reports.cpp:1177 src/reports.cpp:1219
 msgid "Lawful units: "
@@ -8333,7 +8329,7 @@ msgstr "порядна"
 
 #: src/units/types.cpp:546 src/units/types.cpp:911
 msgid "female^neutral"
-msgstr "найтральна"
+msgstr "нейтральна"
 
 #: src/units/types.cpp:547 src/units/types.cpp:913
 msgid "female^liminal"
