--- a/po/wesnoth-l/tr.po
+++ b/po/wesnoth-l/tr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-l\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:40 UTC\n"
 "PO-Revision-Date: 2009-02-23 19:26+0200\n"
 "Last-Translator: Nilgün Belma Bugüner <nilgun@belgeler.gen.tr>\n"
@@ -862,7 +862,7 @@ msgstr ""
 msgid ""
 "We have tarried here for far too long... There is no way we can reach "
 "Elensefar and return with help before the Wesnoth army destroys our homes. "
-"Retreat!"
+"Retreat!!"
 msgstr ""
 "Burada çok fazla oyalandık... Elensefar’a gidip Wesnoth ordusu evlerimizi "
 "yıkmadan önce yardımla dönebileceğimiz bir yol kalmadı. Geri çekiliyoruz!!"
