--- a/po/wesnoth-manual/tr.po
+++ b/po/wesnoth-manual/tr.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-manual\n"
-"POT-Creation-Date: 2017-09-21 23:28+0300\n"
+"POT-Creation-Date: 2018-02-12 20:02+0300\n"
 "PO-Revision-Date: 2009-02-23 22:53+0200\n"
 "Last-Translator: Nilgün Belma Bugüner <nilgun@belgeler.gen.tr>\n"
 "Language-Team: Turkish <wesnoth-tr@googlegroups.com>\n"
@@ -699,9 +699,17 @@ msgstr "Kullanıcı"
 # type: Content of: <book><chapter><section><section><section><simpara>
 #. type: Content of: <book><chapter><section><section><section><simpara>
 #: doc/manual/manual.en.xml:321
+#, fuzzy
+#| msgid ""
+#| "This will be your name on the multiplayer server. If you have an account "
+#| "on the <ulink url=\"http://www.wesnoth.org/forum\">Wesnoth forums</"
+#| "ulink>, you may use the same username and password for joining the "
+#| "official server. A password box will pop up if a password is required for "
+#| "the current username. You cannot use a registered name without the "
+#| "password."
 msgid ""
 "This will be your name on the multiplayer server. If you have an account on "
-"the <ulink url=\"http://www.wesnoth.org/forum\">Wesnoth forums</ulink>, you "
+"the <ulink url=\"https://www.wesnoth.org/forum\">Wesnoth forums</ulink>, you "
 "may use the same username and password for joining the official server. A "
 "password box will pop up if a password is required for the current username. "
 "You cannot use a registered name without the password."
@@ -754,9 +762,14 @@ msgstr ""
 # type: Content of: <book><chapter><section><section><section><simpara>
 #. type: Content of: <book><chapter><section><section><section><simpara>
 #: doc/manual/manual.en.xml:339
+#, fuzzy
+#| msgid ""
+#| "A complete list of official and user setup servers is listed at this "
+#| "website: <ulink url=\"http://wesnoth.org/wiki/MultiplayerServers"
+#| "\">Multiplayer servers</ulink>."
 msgid ""
 "A complete list of official and user setup servers is listed at this "
-"website: <ulink url=\"http://wesnoth.org/wiki/MultiplayerServers"
+"website: <ulink url=\"https://wesnoth.org/wiki/MultiplayerServers"
 "\">Multiplayer servers</ulink>."
 msgstr ""
 "Resmi ve kullanıcıların oluşturduğu sunucuların tam listesini <ulink url="
@@ -2004,8 +2017,12 @@ msgstr ":"
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: doc/manual/manual.en.xml:1153
+#, fuzzy
+#| msgid ""
+#| "<ulink url=\"http://www.wesnoth.org/wiki/CommandMode\">Command mode</"
+#| "ulink>"
 msgid ""
-"<ulink url=\"http://www.wesnoth.org/wiki/CommandMode\">Command mode</ulink>"
+"<ulink url=\"https://www.wesnoth.org/wiki/CommandMode\">Command mode</ulink>"
 msgstr ""
 "<ulink url=\"http://www.wesnoth.org/wiki/CommandMode\">Komut Kipi</ulink>"
 
