--- a/po/wesnoth-tsg/tr.po
+++ b/po/wesnoth-tsg/tr.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-tsg\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:02 UTC\n"
 "PO-Revision-Date: 2008-12-20 20:25+0200\n"
 "Last-Translator: Nilgün Belma Bugüner <nilgun@belgeler.gen.tr>\n"
@@ -1478,7 +1478,10 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:358
-msgid "I shall not join these accursed undead! Bury me deeply, my friends..."
+#, fuzzy
+#| msgid ""
+#| "I shall not join these accursed undead! Bury me deeply, my friends..."
+msgid "I shall not join these accursed undead! Bury me deeply my friends..."
 msgstr ""
 "Bu lanetli yarı ölülere katılmayacağım! Beni derinlere gömün arkadaşlarım..."
 
